assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Libre+Bodoni&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: 'Libre Bodoni', sans-serif; 
    
}


/* logo and header*/

h1 {
    font-family: Aboreto, sans-serif;   
}

#logo {
 float: left;
 font-size: 320%;
 margin-left: 30px;
 color: rgb(5, 5, 5);
 text-shadow:
    0 0 7px #fff,
    0 0 10px rgb(60, 196, 196),
    0 0 21px rgb(28, 221, 255),
    0 0 42px rgb(68, 185, 156),
    0 0 82px rgb(157, 223, 208),
    0 0 92px rgb(65, 61, 104),
    0 0 102px rgb(79, 65, 105),
    0 0 151px rgb(46, 98, 196);
 
}

/*navigation links*/
#menu {
font-size: 140%;


}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 40px;
    color: rgb(255, 255, 255);
    text-shadow:
    0 0 7px #fff,
    0 0 10px rgb(9, 29, 206),
    0 0 21px rgb(16, 185, 252),
    0 0 42px rgb(68, 185, 156),
    0 0 82px rgb(157, 223, 208),
    0 0 92px rgb(65, 61, 104),
    0 0 102px rgb(255, 255, 255),
    0 0 151px rgb(255, 255, 255);
}

#menu a {
    text-decoration: none;
    color: black;
    
    
}

#menu a:hover {
    border-style: dotted none;
    color: rgb(114, 0, 245); 
}

.active {
    border-style: dotted none;
    color: rgb(114, 0, 245);

}

/* background-image*/
#comet-image {
    height: 700px;
    width: 100%;
    background: url(../images/593191.jpg) no-repeat center center;
}
/* #comet-zoom {
    height: 700px;
    width: 100%;
    overflow: hidden;
} */

#undertext {
    position: absolute;
    font-size: 120%;
    top: 8%;
    left: 25px;
    color: rgb(14, 14, 13);
    text-shadow:
    0 0 7px rgb(17, 17, 17),
    0 0 10px rgb(139, 112, 182),
    0 0 21px #fff,
    0 0 42px rgb(253, 253, 253),
    0 0 82px rgb(71, 68, 102),
    0 0 92px rgb(65, 61, 104),
    0 0 102px rgb(233, 229, 240),
    0 0 151px rgb(99, 87, 133);
    
}

/*section club*/
 #cosmos-club {
    background-color: rgb(254, 254, 255); 
    text-align: center;
    font-size: 130%;
    font-family: Aboreto;
    padding-bottom: 300px;
    padding-top: 30px;
} 

#club-image {
   border-radius: 50%;
   opacity: 0.7;
   position: relative;
   width: 70%;
    
    
}

.explore-round {
  color: rgb(52, 12, 88);
  position: absolute;
  margin-top: 200px;
  margin-left: 120px;
  font-size: 110%;
}

/* p travel and facts*/
#club-left {
    padding-top: 30px;
    width: 20%;
    float: left;
    margin-left: 150px;
    
}

#club-right {
    padding-top: 30px;
    width: 20%;
    float: right;
    margin-right: 150px;
}
   #club-center {
    width: 33%;
    margin: 0 auto;
} 

.club-left-h  {
    margin-bottom: 50px;
    font-size: 100%;
    
}

.paragraph-left {
    font-family: 'Libre Bodoni', sans-serif;
    margin-top: 10px;
}

.club-left-h h2 {
    font-family: 'Libre Bodoni', sans-serif;
    font-size: 120%;
    text-decoration: underline;
}

.club-right-h  {
    margin-bottom: 50px;
    font-size: 100%;
}

.paragraph-right {
    font-family: 'Libre Bodoni', sans-serif;
    margin-top: 10px;
}

.club-right-h h2 {
    font-family: 'Libre Bodoni', sans-serif;
    font-size: 120%;
    text-decoration: underline;
}

/* footer */
footer {
    height: 80px;
    position: relative;
    background-color: rgb(0, 187, 194); 
    top: 40px;
}

#social {
    text-align: center;
}

#social > li {
    display: inline;
    padding: 7%;
    font-size: 110%;
        
}

#social i {
   color: black
}
   
#social a:hover {
    color: rgb(85, 1, 219);
    opacity: 0.7;
    border-style: dotted none;

}

#social a {
    text-decoration: none;
    color: black;
    text-shadow:
    0 0 7px #fff,
    0 0 10px rgb(60, 196, 196),
    0 0 21px rgb(28, 221, 255),
    0 0 42px rgb(68, 185, 156),
    0 0 82px rgb(157, 223, 208),
    0 0 92px rgb(65, 61, 104),
    0 0 102px rgb(79, 65, 105),
    0 0 151px rgb(46, 98, 196);
    position: absolute;
    top: 30px;
    text-align: center;
    
}

/* gallery */
#images {
    clear: both;
    line-height: 0;
    padding-top: 60px;
    column-count: 4;
    padding-left: 80px;
    background-color: black;

}
#images img {
     width: 100%;
     height: 80%;
     border: 1px solid white;
}

.description {
    color: rgb(17, 17, 17);
    padding: 10px;
    font-size: 120%;
    text-align: center;
}
#images img:hover {
    border: 3px dotted rgb(43, 220, 226);
    box-sizing: border-box;
    
}

.gallery {
    width: 80%;
    background-color: #fff;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    margin-bottom: 25px;
}

#signup-image {
    background: url(../images/signup.jpg) no-repeat;
    height: 1200px;
    background-size: cover;
    background-color: black;
    
  
    

}


#signup-form {
    background-color: rgb(44, 51, 53);
    height: 400px;
    width: 400px;
    position: absolute;
    top: 250px;
    opacity: 0.7;
    left: 300px;
    padding: 30px;
    border-radius: 7px;
    
}
.input-box {
    height: 25px;
    width: 100%;
    margin: 5px 0 20px 0;
    color: rgb(0, 0, 0);
    font-size: 120%;
    font-family: 'Libre Bodoni', sans-serif;
}

#form-heading {
    text-align: center;
    margin-bottom: 20px;
    font-size: 170%;
    text-shadow:
    0 0 7px #fff,
    0 0 10px rgb(60, 196, 196),
    0 0 21px rgb(28, 221, 255),
    0 0 42px rgb(68, 185, 156),
    0 0 82px rgb(157, 223, 208),
    0 0 92px rgb(65, 61, 104),
    0 0 102px rgb(79, 65, 105),
    0 0 151px rgb(46, 98, 196);
}
.label{
    font-size: 120%;
    color: rgb(252, 252, 252);
}

.radio-text {
    font-size: 120%;
    color: rgb(252, 252, 252); 
    text-shadow:
    0 0 7px #fff,
    0 0 10px rgb(60, 196, 196),
    0 0 21px rgb(28, 221, 255),
    0 0 42px rgb(68, 185, 156),
    0 0 82px rgb(157, 223, 208),
    0 0 92px rgb(65, 61, 104),
    0 0 102px rgb(79, 65, 105),
    0 0 151px rgb(46, 98, 196);
}

.apply-button {
    height: 40px;
    width: 120px;
    margin-left: 80px;
    font-family: 'Libre Bodoni', sans-serif;
    font-size: 120%;
    border: 2px solid rgb(13, 223, 212);
    font-weight: bold;
    
}
.apply-button:hover {
   background-color: rgb(11, 247, 255);
   
}

/* bubbles right side of signup*/
#bubble {
    background-color: rgb(44, 51, 53);
    height: 300px;
    width: 300px;
    position: absolute;
    top: 40px;
    opacity: 0.7;
    right: 600px;
    padding: 30px;
    float: right;
    border-radius: 50%;
}
#start-package {
    text-align: center;
    text-shadow:
    0 0 7px #fff,
    0 0 10px rgb(60, 196, 196),
    0 0 21px rgb(28, 221, 255),
    0 0 42px rgb(68, 185, 156),
    0 0 82px rgb(157, 223, 208),
    0 0 92px rgb(65, 61, 104),
    0 0 102px rgb(79, 65, 105),
    0 0 151px rgb(46, 98, 196);
}

#bubble p {
    color: #fff;
    text-align: center;
}
#bubble_2 {
    background-color: rgb(44, 51, 53);
    height: 330px;
    width: 330px;
    position: absolute;
    top: 100px;
    opacity: 0.7;
    right: 130px;
    padding: 30px;
    float: right;
    border-radius: 50%;
}
#bubble_2 p {
    color: #fff;
    text-align: center;
}
#bubble_3 {
    background-color: rgb(44, 51, 53);
    height: 350px;
    width: 350px;
    position: absolute;
    top: 550px;
    opacity: 0.7;
    right: 170px;
    padding: 30px;
    float: right;
    border-radius: 50%;
}
#bubble_3 p {
    color: #fff;
    text-align: center;
}

/*media-queries*/

/*large to medium screens*/
@media screen and (max-width: 1670px ){

    #cosmos-club {
       width: 65%;
       height: 900px;
       margin: 0 auto;
    }
    
    #club-center {
        width: 65%;
        height: 900px;
        margin: 0 auto;
    }
    #club-left, #club-right {
        width: 100%;
        float: left;
        padding: 0;
        margin: 0 auto;
    }
    #club-center {
        clear: both;
        width: 70%;
        padding: 0;
        margin: 0 auto;
    }

    .explore-round {
        margin: 10px auto;
        position: relative;
    }

    /*footer*/
   #social a {
    margin: 10px auto;
    position: relative;


   }
   /* gallery*/
   .description {
    margin-top: 10px;
    margin-bottom: 10px;
    text-align: center;
    padding: 0px;
    
   }

   #signup-form {
    left: 30px;
    top: 200px;
    
   }

   #bubble {
    bottom: 100px;
   }

}

/* bubbles when screens are smaller than 1500*/
@media screen and (max-width: 1500px ){
    #bubble, #bubble_2, #bubble_3 {
        border-radius: 0;
        left: 30px;
        border-radius: 7px;   
    }

    #bubble {
        top: 700px;
    }

    #bubble_2 {
        top: 1100px;
    }

    #bubble_3 {
        top: 1530px;
    }
    #signup-form {
        float: left;
    }


   #signup-image {
    height: 2000px;
    background-size: 100%;
    
   }
 }


 /*gallery screens smaller than 1300*/
 @media screen and (max-width: 1300px ){
    #images {
        column-count: 2;
    }
}

/*medium to small screens*/
@media screen and (max-width: 1095px ){
   
    #comet-image {
    background-size: 100%;
    }
   }

/* smaller screens*/
@media screen and (max-width: 850px ){
    #menu {
        clear: left;
        float: left;
        margin-left: 30px;
        margin-top: 15px;
    }
    
    #comet-zoom {
       height: 570px;
       position: relative;
    }
}

@media screen and (max-width: 710px) {
    #images {
        column-count: 1;
    }
}

 @media screen and (max-width: 550px ){
 #social > li {
    padding: 3%;
} 

#signup-form {
    width: 70%;
    height: 55%;
}

#bubble, #bubble_2, #bubble_3 {
    width: 70%;
    position: absolute;
}

#bubble {
    top: 800px;
}

#bubble_2  {
    top: 1200px;
}

#bubble_3 {
    top: 1630px;
}

#signup-image {
    height: 2200px;
}

.apply-button {
    margin-left: 5px;
    margin-top: 10px;
}

#cosmos-club {
    height: 1200px;
    
}

#bubble_2 {
    height: 45%;
}
#bubble_3 {
    top: 1700px;
    height: 46%;
}

#bubble {
    height: 34%;
}

/*images gallery */
#images {
    padding-left: 30px;
    width: 100%;
}
 }

 /* nav screens smaller than 390*/
 @media screen and (max-width: 390px ) {
   
    #menu li {
     margin-right: 20px;
     }

     #social li {
        padding: 1%;
     }
 }



 
 
    

